# wappu-spiriter

./: .env.example  .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml  readme.md
.github/workflows/: lint.yml  main.yml
tests/: test_gpt4_image_recognition.py
wappu_spiriter/: __main__.py  bot.py  fetch_score_for_image.py  game_context.py  game_model.py  settings.py
wappu_spiriter/image_related/: img_from_tg_msg.py  manipulate_img.py  utils.py
wappu_spiriter/scenario_definitions/: scenario_model.py
