[tool.poetry]
name = "wappu_spiriter"
version = "0.1.0"
description = ""
authors = ["Mikael Siidorow <mikael.siidorow@aalto.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ruff = "^0.3.5"
mypy = "^1.9.0"
python-telegram-bot = "^21.0.1"
poethepoet = "^0.25.0"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"

[tool.poe.tasks]
format = [{ cmd = "ruff format ." }, { cmd = "ruff check . --fix" }]
check = "mypy ."
lint = "ruff check ."
start = "python -m wappu_spiriter"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
